      There's a bonus to fleet speeds for summon wind mages (who can bundle their efforts) and
      for highly skilled sailors sailing in good ships. Also changed the skillshow for S_SUMMON_WIND
      and the genrules (just scantily) to take the ship info from both items and objects. Ships _may_
      still be objects but then cannot act as parts of fleets and this is discouraged.
   	  Unfinished ships may not be given (except given away completely), but finished ship may be transferred
   	  between the owners of fleets.
   -- modified GIVEing of ships so that new fleets get created dynamically, added code for
      build helpers in shipbuilding, and cleaned up a bug in the removal of empty fleets
   -- changed fleet reports so that single-ship fleets show the ship type as <object type>
      rather than "Fleet". Also no ship list is displayed for them.
   -- implemented ENTER NEW <alias>. New fleets created during GIVE orders are now given aliases that
      may be specified in an Enter order.	
   -- implemented handling of ship items in spoils
   -- prevented ship items from being PRODUCED
   -- updated the skillshows and itemshows to handle ship items properly
   -- added the STUDY [skill] [level] option for repeated study. STUDY is no longer useable with the
      '@' symbol as a repeating order  
   -- moved EmptyHell() to Game:RunGame() to prevent dead mages bug with IMPROVED_FARSIGHT.
   -- added an IsAlive() check to Unit::CanReallySwim() to prevent newly formed units from LEAVING
      a ship and then drowning during give.
   -- fixed bug where clear skies didn't affect sailing cost.
   -- added REQUIRED_EXPERIENCE. Units have their study rate (in normal games always 30 days per
      month no matter what) adjusted when they have significantly less or much more experience
      than days of study. (Currently still using the old Practice mechanism to gain experience)
   	  ToDo: armored galleon bonus...?
   