@@ -1355,7 +1355,7 @@ int Game::RunEarthLore(ARegion *r,Unit *u)
 	int level = u->GetSkill(S_EARTH_LORE);
 
 	if (level > r->earthlore) r->earthlore = level;
-	int amt = r->Wages() * level * 2;
+	int amt = r->Wages() * level * 2 / 10;
 
 	u->items.SetNum(I_SILVER,u->items.GetNum(I_SILVER) + amt);
 	u->Event(AString("Casts Earth Lore, raising ") + amt + " silver.");
